--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CleanArchitectureSample"
+        android:name="com.example.psbankapplication.BaseApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.vinmahob.ui.architecture.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CleanArchitectureSample">
