--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ converterGson = "2.9.0"
 kotlin = "1.9.0" #the Compose Compiler requires Kotlin version 1.8.10
 androidxCore = "1.12.0"
 androidxLifecycle = "2.6.2"
-androidxActivity = "1.8.1"
+androidxActivity = "1.8.2"
 androidxComposeBom = "2023.10.01"
 androidxHilt = "1.1.0"
 androidxNavigation = "2.7.5"
@@ -18,6 +18,7 @@ appcompat = "1.6.1"
 material = "1.11.0"
 retrofit = "2.9.0"
 hiltAndroid = "2.48"
+coilCompose = "2.2.2"
 
 [libraries]
 android-tools-build-gradle-plugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -45,6 +46,7 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
