--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 androidGradlePlugin = "8.2.0"
 converterGson = "2.9.0"
-kotlin = "1.9.0" #the Compose Compiler requires Kotlin version 1.8.10
+kotlin = "1.9.0"
 androidxCore = "1.12.0"
 androidxLifecycle = "2.6.2"
 androidxActivity = "1.8.2"
@@ -12,7 +12,7 @@ kotlinxCoroutinesAndroid = "1.7.3"
 kotlinxCoroutinesTest = "1.7.3"
 mockk = "1.13.8"
 org-jetbrains-kotlin-jvm = "1.9.0"
-hilt = "2.45"
+hilt = "2.48"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
@@ -56,7 +56,7 @@ coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose"
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org-jetbrains-kotlin-jvm" }
-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version = "hilt" }
+google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 androidLibrary = { id = "com.android.library", version.ref = "androidGradlePlugin" }
-
+org-jetbrains-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 
