--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:name=".CleanArchitectureApplication"
         tools:targetApi="31">
         <activity
-            android:name="com.vinmahob.ui.architecture.MainActivity"
+            android:name="com.vinmahob.presentation.architecture.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CleanArchitectureSample">
